# xllm-service

xllm_service/common/: call_data.h  types.h
xllm_service/examples/: CMakeLists.txt  d2d_transmission_optimizer_example.cpp  d2d_transmission_test_more.cpp
xllm_service/http_service/: service.cpp  service.h
xllm_service/proto/: xllm_rpc_service.proto
xllm_service/rpc_service/: service.cpp  service.h
xllm_service/scheduler/: request_context.h  scheduler.cpp  scheduler.h
xllm_service/scheduler/managers/: CMakeLists.txt  d2d_transmission_optimizer.cpp  d2d_transmission_optimizer.h  instance_mgr.cpp  instance_mgr.h
